Crealead 2.0.2 - 31/03/2016
---------------------------
Hotfix : Forgotten dpm() removed from crealead_news.module file.

Crealead 2.0.1 - 31/03/2016
---------------------------
Registration fatal error class patch commented.
Upgraded contrib module entityreference needed a patch (see https://www.drupal.org/node/1836106#comment-10531886).
Missing contrib modules declarations added (field_formatter_settings, field_formatter_class).

Crealead 2.0 - 30/03/2016
-------------------------
Major update of Drupal (from 7.37 to 7.43) core + 32 contrib modules +  Adminimal theme.
Completes #18: entrepreneur role checked by default in 'Assignable roles' field if connected user has role referent.
V2: Story 'Rentrer les données complètes des candidats' done.
V2: US 'Mettre l'entrepreneur créateur de la fiche marque comme entrepreneur par défaut' done.
Missing setting added: field_brand_coes field made compulsory.
Permissions for role 'Pole emploi' added.
V2: US 'Inscriptions réunions d'infos après coup' done.
Closes reopened ticket #56: Brand news are now sorted by field_sorting_date.
Asterisk (*) added to email field in subscription form and View/Edit tabs removed from subscription full view for anonymous users.
Administer menus and menus items permission added to webmaster role.

Crealead 1.0.7 - 24/02/16
-------------------------
Hotfix:
- Previous hotfix simplified after field_brand_coe (in field_brand_coes) made required.
- Strongarm variables brand_default_logo, coe_default_logo and coe_default_picture removed from features.

Crealead 1.0.6 - 23/02/16
-------------------------
Hotfix: Fixes bug in brand full view when coes are not filled, but their competencies are.

Crealead 1.0.5 - 20/02/2016
---------------------------
Hotfix: Fixes bug in previous hotfix.

Crealead 1.0.4 - 20/02/2016
--------------------------
Hotfix : Brand publication mechanism altered.

Crealead 1.0.3 - 17/02/2016
---------------------------
Hotfix : Previous hotfix correction updated.
